--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
-  "name": "blue_fly",
+  "name": "bluefly-clone-frontend",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "font-awesome": "^4.7.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "@chakra-ui/react": "^1.8.8",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "react": "^17.0.2",
+    "react-carousel-minimal": "^1.4.1",
+    "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.7"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
