product page working

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
     "font-awesome": "^4.7.0",
-    "react": "^18.0.0",
+    "react": "^17.0.2",
     "react-carousel-minimal": "^1.4.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
